--- a/笨鸟先飞.md
+++ b/笨鸟先飞.md
@@ -3,5 +3,6 @@
 
 > [W3CSCHOOL ECMAScript教程](https://www.w3cschool.cn/ecmascript/)<br>
 > [MDN web docs JavaScript基础](https://developer.mozilla.org/zh-CN/docs/Learn/Getting_started_with_the_web/JavaScript_basics)<br>
+> [W3CSCHOOL 在手机上查看文档](https://m.w3cschool.cn/ecmascript/)<br>
 > [Jquery API](http://jquery.cuishifeng.cn/)<br>
 > [Lodash](https://www.lodashjs.com/)
